--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -51,4 +51,8 @@ form:
       datacenter: "dal13"
       #target-region: "us-south"
       target-region: "{{region}}"
-      #target-resource-group: "default"
+      target-resource-group: "default"
+#    {
+#      "type": "validator",
+#      "url": "/devops/setup/bm-helper/custom_helper.html"
+#    },
