--- a/.bluemix/pipeline.yml
+++ b/.bluemix/pipeline.yml
@@ -30,11 +30,11 @@ properties:
 - name: IBMCLOUD_API_KEY
   value: "${API_KEY}"
   type: secure
-- name: SOFTLAYER_USERNAME
-  value: "${SOFTLAYER_USERNAME}"
+- name: IAAS_CLASSIC_USERNAME
+  value: "${IAAS_CLASSIC_USERNAME}"
   type: text
-- name: SOFTLAYER_API_KEY
-  value: "${SOFTLAYER_API_KEY}"
+- name: IAAS_CLASSIC_API_KEY
+  value: "${IAAS_CLASSIC_API_KEY}"
   type: secure
 
 stages:
